build_output.log

> Configure project :
Java: 21.0.6, JVM: 21.0.6+8-LTS-188 (Oracle Corporation), Arch: amd64

> Task :createMinecraftArtifacts UP-TO-DATE

> Task :compileJava FAILED
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\client\tabs_menu\BodyDamageTab.java:12: error: package sfiomn.legendarysurvivaloverhaul.client does not exist
import sfiomn.legendarysurvivaloverhaul.client.ClientHooks;
                                              ^
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\client\tabs_menu\BodyDamageTab.java:22: error: package sfiomn.legendarysurvivaloverhaul.config.Config does not exist
import static sfiomn.legendarysurvivaloverhaul.config.Config.Baked.localizedBodyDamageEnabled;
                                                            ^
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\client\tabs_menu\BodyDamageTab.java:22: error: static import only from classes and interfaces
import static sfiomn.legendarysurvivaloverhaul.config.Config.Baked.localizedBodyDamageEnabled;
^
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\client\tabs_menu\FtbTeamsTab.java:3: error: package dev.ftb.mods.ftbteams.net does not exist
import dev.ftb.mods.ftbteams.net.OpenGUIMessage;
                                ^
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\client\tabs_menu\InventoryTab.java:16: error: package top.theillusivec4.curios.client.gui does not exist
import top.theillusivec4.curios.client.gui.CuriosScreen;
                                          ^
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\client\tabs_menu\PufferfishsSkillsTab.java:7: error: package net.puffish.skillsmod.client does not exist
import net.puffish.skillsmod.client.SkillsClientMod;
                                   ^
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\utils\IntegrationUtils.java:7: error: package com.tiviacz.travelersbackpack.capability does not exist
import com.tiviacz.travelersbackpack.capability.AttachmentUtils;
                                               ^
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\utils\IntegrationUtils.java:8: error: package com.tiviacz.travelersbackpack.inventory does not exist
import com.tiviacz.travelersbackpack.inventory.BackpackWrapper;
                                              ^
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\client\tabs_menu\BodyDamageTab.java:33: error: cannot find symbol
        if (ModIntegrationManager.isModLoaded(ModIntegration.LEGENDARY_SURVIVAL_OVERHAUL) && localizedBodyDamageEnabled)
                                                                                             ^
  symbol:   variable localizedBodyDamageEnabled
  location: class BodyDamageTab
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\client\tabs_menu\BodyDamageTab.java:34: error: cannot find symbol
            ClientHooks.openBodyHealthScreen(player);
            ^
  symbol:   variable ClientHooks
  location: class BodyDamageTab
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\client\tabs_menu\BodyDamageTab.java:39: error: cannot find symbol
        return ModIntegrationManager.isModLoaded(ModIntegration.LEGENDARY_SURVIVAL_OVERHAUL) && Config.Baked.bodyDamageTabEnabled && localizedBodyDamageEnabled;
                                                                                                                                     ^
  symbol:   variable localizedBodyDamageEnabled
  location: class BodyDamageTab
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\client\tabs_menu\BodyDamageTab.java:60: error: cannot find symbol
        if (!localizedBodyDamageEnabled) return false;
             ^
  symbol:   variable localizedBodyDamageEnabled
  location: class BodyDamageTab
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\client\tabs_menu\FtbTeamsTab.java:27: error: cannot find symbol
            (new OpenGUIMessage()).sendToServer();
                 ^
  symbol:   class OpenGUIMessage
  location: class FtbTeamsTab
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\client\tabs_menu\InventoryTab.java:56: error: cannot find symbol
            ScreenRegistry.registerStandardScreens(CuriosScreen.class);
                                                   ^
  symbol:   class CuriosScreen
  location: class InventoryTab
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\client\tabs_menu\PufferfishsSkillsTab.java:29: error: cannot find symbol
            SkillsClientMod.getInstance().openScreen(Optional.empty());
            ^
  symbol:   variable SkillsClientMod
  location: class PufferfishsSkillsTab
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\ModTabs.java:61: warning: [removal] bus() in EventBusSubscriber has been deprecated and marked for removal
    @EventBusSubscriber(modid = MOD_ID, value = Dist.CLIENT, bus = EventBusSubscriber.Bus.MOD)
                                                             ^
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\ModTabs.java:61: warning: [removal] Bus in EventBusSubscriber has been deprecated and marked for removal
    @EventBusSubscriber(modid = MOD_ID, value = Dist.CLIENT, bus = EventBusSubscriber.Bus.MOD)
                                                                                     ^
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\utils\IntegrationUtils.java:63: error: cannot find symbol
        BackpackWrapper wrapper = AttachmentUtils.getBackpackWrapper(player);
        ^
  symbol:   class BackpackWrapper
  location: class IntegrationUtils
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\utils\IntegrationUtils.java:63: error: cannot find symbol
        BackpackWrapper wrapper = AttachmentUtils.getBackpackWrapper(player);
                                  ^
  symbol:   variable AttachmentUtils
  location: class IntegrationUtils
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\utils\IntegrationUtils.java:77: error: cannot find symbol
        BackpackWrapper wrapper = AttachmentUtils.getBackpackWrapper(player);
        ^
  symbol:   class BackpackWrapper
  location: class IntegrationUtils
D:\MinecraftMods\Neoport Mods\LegendaryTabsNeoforged\src\main\java\vodmordia\modtabs\utils\IntegrationUtils.java:77: error: cannot find symbol
        BackpackWrapper wrapper = AttachmentUtils.getBackpackWrapper(player);
                                  ^
  symbol:   variable AttachmentUtils
  location: class IntegrationUtils
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
19 errors
2 warnings

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 2s
2 actionable tasks: 1 executed, 1 up-to-date
